typescript/checker/tests/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration4.ts.stderr
error: Unexpected token Some(Word(Foo))
 --> $DIR/tests/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration4.ts:2:10
  |
2 |   export Foo;
  |          ^^^

